# practice_fastapi

./: LICENSE  README.md  docker-compose.yml
docker/: Dockerfile_python
src/: main.py  pyproject.toml  run.sh
