[tool.poetry]
name = "practice_fastapi"
version = "0.1.9"
description = "practice"
authors = ["Yusuke Shinohara <complex.alpha.cxa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
psutil = "^5.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
